--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -35,22 +35,31 @@
                         <h3 class="titre_menus">Fricassées d'escargots</h3>
                         <p class="subtitle_menus">Au piment d'espellette</p>
                         <p class="prix">25<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Foie gras de canard mi-cuit</h3>
                         <p class="subtitle_menus">Et ses copeaux de truffe noire</p>
                         <p class="prix">35<span class="euros">€</span></p>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
+                        </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Œuf au plat</h3>
                         <p class="subtitle_menus">Assaisonné à la truffe sur lit de caviar</p>
                         <p class="prix">20<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>                    
                 </div>                          
                 <div class="plats">                    
@@ -59,25 +68,31 @@
                         <h3 class="titre_menus">Filet de bœuf aux herbes</h3>
                         <p class="subtitle_menus">Accompagné de sa ribambelle de légumes</p>
                         <p class="prix">40<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Parmentier de queue de bœuf</h3>
                         <p class="subtitle_menus">À la truffe noire sur sa purée de panais</p>
                         <p class="prix">35<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Filet de turbot</h3>
                         <p class="subtitle_menus">Aux agrumes</p>
                         <p class="prix">44<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                 </div>
                 <div class="desserts">                    
@@ -86,25 +101,31 @@
                         <h3 class="titre_menus">Paris-Brest</h3>
                         <p class="subtitle_menus">Revisité</p>
                         <p class="prix">18<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Macaron au chocolat d'exception</h3>
                         <p class="subtitle_menus">Et glace à la vanille de Madagascar</p>
                         <p class="prix">22<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
-                        </button>                        
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
+                        </button>
+                        </a>                       
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Mousse au chocolat </h3>
                         <p class="subtitle_menus">Au piment d'Espelette et à la truffe noire</p>
                         <p class="prix">23<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                 </div>
                 <div class="commander">
