--- a/Restaurants/restaurant3.html
+++ b/Restaurants/restaurant3.html
@@ -35,33 +35,41 @@
                         <h3 class="titre_menus">Ravioles de foie gras </h3>
                         <p class="subtitle_menus">Accompagnées de leur crème à la truffe</p>
                         <p class="prix">25<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Caviar osciètre </h3>
                         <p class="subtitle_menus">Sur blini à la farine de blé noir</p>
                         <p class="prix">35<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Homard et espuma de potiron</h3>
                         <p class="subtitle_menus">Marinés aux zestes d'orange</p>
                         <p class="prix">20<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Foie gras de canard cuit entier</h3>
                         <p class="subtitle_menus">Confiture de figue et pain toasté</p>
                         <p class="prix">35<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>                       
                 </div>                          
                 <div class="plats">                    
@@ -70,25 +78,31 @@
                         <h3 class="titre_menus">Noix de coquilles Saint-Jacques</h3>
                         <p class="subtitle_menus">Sur lit de purée de céleri-rave</p>
                         <p class="prix">40<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Langoustine poêlée</h3>
                         <p class="subtitle_menus">Purée de patate douce</p>
                         <p class="prix">35<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Mijoté de queue de bœuf</h3>
                         <p class="subtitle_menus">Et riz sauvage aux zestes de citron</p>
                         <p class="prix">45<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                 </div>
                 <div class="desserts">                    
@@ -97,25 +111,31 @@
                         <h3 class="titre_menus">Macaron noisette et chocolat</h3>
                         <p class="subtitle_menus">Glace au caramel brun et sel de Guérande</p>
                         <p class="prix">18<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Baba au rhum revisité</h3>
                         <p class="subtitle_menus">Avec son coulis de citron</p>
                         <p class="prix">22<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
-                        </button>                        
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
+                        </button>
+                        </a>                       
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Tarte au citron meringuée</h3>
                         <p class="subtitle_menus">Déstructurée</p>
                         <p class="prix">23<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                 </div>
                 <div class="commander">                        
