--- a/Restaurants/restaurant4.html
+++ b/Restaurants/restaurant4.html
@@ -35,25 +35,31 @@
                         <h3 class="titre_menus">Tartare de poulpe acidulé</h3>
                         <p class="subtitle_menus">Aux zestes d'orange</p>
                         <p class="prix">25<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Velouté de légumes d'antan</h3>
                         <p class="subtitle_menus">Carotte, panais, topinambour</p>
                         <p class="prix">35<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Soupe à l'oignon</h3>
                         <p class="subtitle_menus">Revisitée</p>
                         <p class="prix">20<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>                    
                 </div>                          
                 <div class="plats">                    
@@ -62,25 +68,31 @@
                         <h3 class="titre_menus">Coquilles Saint-Jacques</h3>
                         <p class="subtitle_menus">Accompagnées d'une purée de panais</p>
                         <p class="prix">40<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Magret de canard</h3>
                         <p class="subtitle_menus">Et parmentier de pommes de terre</p>
                         <p class="prix">35<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Pigeonneau d’Ille-et-Vilaine</h3>
                         <p class="subtitle_menus">Sur son lit de gnocchis aux légumes</p>
                         <p class="prix">44<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                 </div>
                 <div class="desserts">                    
@@ -89,25 +101,31 @@
                         <h3 class="titre_menus">Pétales de violettes glacés</h3>
                         <p class="subtitle_menus">Et purée de noisettes</p>
                         <p class="prix">18<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Fondant au chocolat</h3>
                         <p class="subtitle_menus">Revisité</p>
                         <p class="prix">22<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
-                        </button>                        
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
+                        </button>
+                        </a>                      
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Millefeuille croustillant</h3>
                         <p class="subtitle_menus">Myrtilles et pâte d’amande</p>
                         <p class="prix">23<span class="euros">€</span></p>
-                        <button class="div-vert">
-                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        <a href="#">
+                        <button class="div-vert">                        
+                            <i class="fa-solid fa-check-circle"></i>
                         </button>
+                        </a>
                     </div>
                 </div>
                 <div class="commander">                        
